<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:minHeight="@dimen/dim90"
    android:orientation="horizontal"
    android:padding="@dimen/dim16">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_name"
            style="@style/textViewListItem"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/category_unknown1" />


        <TextView
            android:id="@+id/game_price"
            style="@style/textViewListItem"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:text="@string/category_unknown2" />

        <TextView
            android:id="@+id/game_in_stock"
            style="@style/textViewListItem"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:text="@string/category_unknown3" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dim4"
        android:contentDescription="@string/selling_icon"
        android:src="@drawable/ic_cart_black_36dp" />

</LinearLayout>
